--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,10 +1,30 @@
 {
   "menu": {
+    "screen_name": "Menu",
     "successful_attemps": "Successful attempts: {{attemptsNumber}}"
   },
   "quiz_screen": {
+    "screen_name": "Quiz",
     "question": "Question {{questionId}}",
     "next": "Next"
+  },
+  "settings": {
+    "screen_name": "Settings",
+    "language": {
+      "title": "Language",
+      "options": {
+        "es": "Español",
+        "en": "English"
+      }
+    },
+    "themeMode": {
+      "title": "Theme",
+      "options": {
+        "system": "System",
+        "light": "Light",
+        "dark": "Dark"
+      }
+    }
   },
   "mistakes_empty_quiz": {
     "title": "This list is empty",
@@ -19,23 +39,6 @@
     "failure": "Try again!",
     "retry": "Retry Quiz",
     "menu": "Menu"
-  },
-  "settings": {
-    "language": {
-      "title": "Language",
-      "options": {
-        "es": "Spanish",
-        "en": "English"
-      }
-    },
-    "themeMode": {
-      "title": "Theme",
-      "options": {
-        "system": "System",
-        "light": "Light",
-        "dark": "Dark"
-      }
-    }
   },
   "routes": {
     "ordered_quiz": {
