Establish google login on both platforms

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -24,7 +24,8 @@
         "light": "Light",
         "dark": "Dark"
       }
-    }
+    },
+    "googleLogin": "Sync your stats"
   },
   "mistakes_empty_quiz": {
     "title": "This list is empty",
